finished API docs, Application layer task endpoint, started env for core and data layer
